# 99-problems

./: README.md  doctests.hs  problems.cabal
haskell/: Problems.hs  README.md
scheme/: 99.scm  README.md  asserts.scm
src/: Lists.hs
test/: doctests.hs
