name:                problems
version:             0.1
license:             PublicDomain
author:              Kjetil Valle
maintainer:          kjetil.valle@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctest
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       src test
  ghc-options:          -threaded -Wall
  main-is:              doctests.hs
  build-depends:        base
                      , doctest >= 0.9.3
